--- a/desafio/ex012/estilo/style.css
+++ b/desafio/ex012/estilo/style.css
@@ -63,6 +63,10 @@ section {
  
 }
 
+section > p {
+    padding-bottom: 5%;
+}
+
 section.normal {
    background-color: white;
    color: rgb(54, 53, 53)
@@ -71,6 +75,9 @@ section.normal {
 section.imagem{
     background-color: rgb(42, 41, 41);
     color: white;
+    background-size: cover;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.492);
+    background-attachment: fixed;
 
 
 }
@@ -78,8 +85,17 @@ section.imagem > p {
     background-color: rgba(0, 0, 0, 0.251);
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0px black;
 }
 
+section#img01 {
+  background-image: url('../imagens/background001.jpg');
+  background-position: right center;
+}
+
+section#img02 {
+background-image: url('../imagens/background002.jpg');
+}
 
 footer {
     color: white;
