tentei mudar algo

--- a/desafio/ex012/estilo/style.css
+++ b/desafio/ex012/estilo/style.css
@@ -9,7 +9,7 @@
 :root {
   --fonte1: Verdana, Geneva, Tahoma, sans-serif;
   --fonte2: 'Passion One', sans-serif;
-  --fonte3:   "srircha", cursive;
+  --fonte3:   "srircha" ;
 }
 
 
