--- a/exercicios/ex026/mq002/estilos/retrato.css
+++ b/exercicios/ex026/mq002/estilos/retrato.css
@@ -3,5 +3,6 @@
 /*aparelho em pé (portrait)*/
 
 body {
-    background-image: url(../img/cev-portrait.jpg );
+    background-image: url(../img/cev-portrait.jpg);
+    background-position: center bottom;
 }
